Add solver based on generator